# dbt-opiner

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  design.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci_workflow.yaml  coveralls_upload.yaml  coveralls_upload.yml  pre_commit_and_pytest_flow.yaml  pre_commit_and_pytest_flow.yml  pre_commit_flow.yaml  pytest_flow.yaml  pytest_flow.yml  python-publish.yaml  python-publish.yml
dbt_opiner/: cli.py  config_handler.py  config_singleton.py  dbt.py  dbt_artifacts.py  dbt_manifest.py  dbt_project.py  dev.py  entrypoint.py  exceptions.py  file.py  file_handlers.py  git.py  linter.py  package.py  utils.py
dbt_opiner/opinions/: BQ001_bigquery_targets_must_have_maximum_bytes_billed.py  BQ002_bigquery_tables_should_have_clustering.py  BQ003_bigquery_views_must_have_partition_and_cluster_description.py  BQ004_bigquery_models_must_persist_docs.py  D001_yaml_docs_should_have_n_docs.py  L001_sources_must_only_be_used_in_staging.py  L002_layer_x_must_not_select_from_layer_y.py  O001_model_must_have_description.py  O002_model_description_must_have_keywords.py  O003_all_columns_must_have_description.py  O004_columns_in_model_must_be_explicitly_named_at_least_once.py  O004_final_columns_in_model_must_be_explicitly_named_at_least_once.py  O004_model_should_have_unique_key.py  O005_model_should_have_unique_key.py  O006_models_names_must_start_with_a_prefix.py  O007_yml_files_must_not_have_outdated_colums.py  P001_pii_columns_must_have_tags.py  P001_pii_columns_should_have_tags.py  P002_project_must_not_send_anon_stats.py  __init__.py  base_opinion.py  opinions_pack.py
tests/: conftest.py
tests/core/: test_cli.py  test_config_singleton.py  test_dbt_manifest.py  test_dbt_node.py  test_dbt_project.py  test_dbt_project_loader.py  test_file_handlers.py  test_lint_result.py  test_linter.py  test_opinions_pack.py  test_package.py
tests/demo_multi_project/orders/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
tests/demo_multi_project/orders/models/staging/orders/: _orders__model.yml  _orders__source.yml  stg_orders.sql
tests/demo_multi_project/orders/models/staging/payments/: _payments__model.yml  _payments__source.yml  stg_payments.sql
tests/multi_repo/customers/: dbt_project.yml  profiles.yml  pyproject.toml
tests/multi_repo/customers/.dbt_opiner/: config.yaml
tests/multi_repo/customers/macros/: docs.yml  my_macro.sql
tests/multi_repo/customers/models/dimensions/: dim_active_customers.sql  dim_churned_customers.sql  dim_churned_customers.yml  dim_customers.sql  dim_customers.yml
tests/multi_repo/customers/models/staging/: schema.yml
tests/multi_repo/customers/tests/: my_test.sql
tests/opinions/: test_BQ001.py  test_BQ002.py  test_BQ003.py  test_BQ004.py  test_D001.py  test_L001.py  test_L002.py  test_O001.py  test_O002.py  test_O003.py  test_O004.py  test_O005.py  test_O006.py  test_O007.py  test_P001.py  test_P002.py  test_base_opinion.py
(+24 files in other folders)
