[tool.poetry]
name = "dbt-opiner"
version = "0.1.0"
description = "A tool to keep dbt projects on rails"
authors=["John Smith <john@example.com>"]

[tool.poetry.scripts]
dbt-opiner = "dbt_opiner.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = ">=8.1"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
setuptools = "^72.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2"
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
