[tool.poetry]
name = "dbt-opiner"
version = "1.5.0"
description = "A tool to keep dbt projects on rails"
authors=["Rodrigo Loredo <loredo.rod@gmail.com>", "Noora Mattsson <nooramattsson97@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
dbt-opiner = "dbt_opiner.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = ">=8.1"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
setuptools = "^72.1.0"
sqlglot = "^25.10.0"
pyfiglet = "^1.0.2"
requests = "^2.32.3"
pandas = "^2.2.2"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1"
pre-commit = "^2"
pytest = "^7.4"
pytest-xdist = "^3.6.1"
tox = "^4.18.0"
mypy = "^1.11.2"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore=tests/demo_multi_project"

[tool.tox]
legacy_tox_ini = """
  [tox]
  envlist = py310, py311, py312

  [testenv]
  deps = poetry
  commands_pre =
    poetry lock --quiet
    poetry install --no-root --quiet
  commands = poetry run pytest
"""

[tool.mypy]
files = "dbt_opiner/**/*.py"
warn_unused_configs = true
warn_unused_ignores = false
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
# Put dependencie's name here if mypy fails to import stubs
module = [
"requests.*",
"yaml.*",
"pyfiglet.*",
"pandas.*",
]
ignore_missing_imports = true
