[tool.poetry]
name = "customers"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dbt-duckdb = ">=1.7.3,<1.9.0"
dbt-opiner = {path = "/Users/rodrigo/vinted/dbt-opiner"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
